6.06_03
    - $(SAY) is now $(ECHO) on VMS
    - Moved rogue initializations from tools_other() to init_others()
    - Normalized MM_VMS's tools_other() to mostly use its superclass.
    - split_command() was off-by-one when calculating max command line
      lengths causing it to run over on VMS
    - made split_command() a bit smarter, taking into account some macro
      expansion
    - Fixed initialization of OBJECT, DISTNAME and LDFROM on VMS
    - Fixed *_install target uses of File::Spec.
    - Added ExtUtils::MakeMaker::vmsish wrapper around vmsish so MM_VMS
      can be compiled on non-VMS machines.  For testing.
    * Added ExtUtils::MakeMaker::Tutorial about writing modules with
      MakeMaker.
    - Removed "always use h2xs" dogma.
    - Added compile & POD test
    * 'make distdir' now generates META.yml module meta-data file.
      Proof of concept.  Have to syncronize with Module::Build.
    * Added maniadd() to ExtUtils::Manifest to add entries to the MANIFEST
    * ExtUtils::Command::chmod was not interpreting file permissions as
      octal.  Also, docs & tests slightly wrong (thanks Stas Bekman).
    - ExtUtils::Install was hard coding blib/lib and blib/arch, unportable
      [perl #21526]

6.06_02 Mon Dec 23 20:39:57 PST 2002
    * Lots of Win32 fixes busted between 6.05 and 6.06_01.  
    * split_command() tests still not happy on Win32.  Problems with
      shell vs Makefile escaping makes testing difficult.
    * VMS still broken.  Need to convert File::Spec method calls back to
      object method calls so the weird FS::VMS->eliminate_macros() and 
      fixpath() work again.

6.06_01 Thu Dec 19 00:14:49 PST 2002
    - Andreas found that when building the core it is desirable for
      MakeMaker to use a relative path to perl.
    - File::Spec->catfile() has a bug where the resulting file may not be
      canonicalized.  This was causing problems when generating manpaths.
      MakeMaker now uses its own fixed override for catfile().